kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: practice-helm
  labels:
    app.kubernetes.io/name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: order-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order-service
    spec:
      containers:
        - name: order-service
          image: trucnguyen301197/helm-order-service:1.1.0
          ports:
            - containerPort: 8083
          imagePullPolicy: Always
