kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: practice-helm
  labels:
    app.kubernetes.io/name: order-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8083
  selector:
    app.kubernetes.io/name: order-service
